spring microservice gateway

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,11 @@ authentication.jwt.private-key=MIIEvwIBADANBgkqhkiG9w0BAQEFAASCBKkwggSlAgEAAoIBA
 authentication.jwt.expiration-in-ms=86400000
 
 spring.main.allow-circular-references=true
+
+retrofit.timeout=30
+
+spring.security.user-name=embozkurt
+spring.security.user-password=147258
+
+product.service.url=http://localhost:8081/
+transaction.service.url=http://localhost:8082/
